# goC8

./: .bazeliskrc  .bazelproject  .bazelrc  .gitignore  BUILD.bazel  LICENSE  README.md  README_KEYS.md  WORKSPACE  access_api.go  client.go  client_config.go  client_error.go  client_kv.go  client_manager_collection.go  client_manager_document.go  client_manager_graph.go  client_manager_graph_edge.go  client_manager_graph_vertex.go  client_manager_index.go  client_manager_kv.go  client_manager_query.go  client_manager_query_worker.go  client_request.go  client_response.go  client_util_create.go  client_util_err.go  client_util_print.go  client_util_teardown.go  collection.go  doc_query.go  document.go  document_many.go  go.mod  go.sum  graph.go  graph_edge.go  graph_vertex.go  http_interface.go  http_request.go  (+9 more)
.github/workflows/: codeql-analysis.yml
c8/: access_api.go  client.go  client_config.go  client_error.go  client_request.go  client_response.go  interface.go  util.go
client/: client.go  client_config.go  client_request.go
doc/: data-residency.md  errata.md  setup.md  status.md
examples/: BUILD.bazel
examples/api/collections/: main.go
examples/api/documentstore/: main.go  utils.go
examples/api/graph/: main.go
examples/api/index/: main.go
examples/api/kv/: main.go
examples/documentstore/: BUILD.bazel  main.go
examples/flight/: flight_data.go  main.go  setup.go  teardown.go  utils.go
examples/graph/: BUILD.bazel
examples/sample_data/: flight.go  flight_data.go  university.go  university_data.go
examples/university/: data.go  main.go  setup.go  teardown.go  tmp.go  university_data.go  update.go
requests/: BUILD.bazel  addNewReqRes.sh
requests/collection_req/: BUILD.bazel  collection_types.go  count_collection.go  create_new_collection.go  delete_collection.go  get_all_collections.go  shared.go  truncate_collection.go  update_collection.go
requests/document_req/: BUILD.bazel  create_document.go  create_parameters.go  delete_document.go  delete_many_documents.go  delete_parameters.go  get_document.go  replace_document.go  replace_parameters.go  shared.go  update_document.go  update_many_document.go  update_parameters.go
requests/graph_req/: BUILD.bazel  addNewReqRes.sh  add_edge_collection.go  create_edge.go  create_graph.go  delete_edge.go  delete_edge_collection.go  get_all_edges.go  get_all_graphs.go  get_all_vertices.go  get_edge.go  get_graph.go  get_vertex.go  replace_edge.go  shared.go  update_edge.go
requests/graph_req/edge_req/: BUILD.bazel  addNewReqRes.sh  add_edge_collection.go  create_edge.go  delete_edge.go  delete_edge_collection.go  get_all_edges.go  get_all_in_out_edges.go  get_edge.go  replace_edge.go  update_edge.go
requests/graph_req/shared/: shared.go
requests/graph_req/vertex_req/: BUILD.bazel  add_vertex_collection.go  create_vertex.go  delete_vertex.go  delete_vertex_collection.go  get_all_vertices.go  get_vertex.go  replace_vertex.go  update_vertex.go
requests/index_req/: BUILD.bazel  addNewReqRes.sh  create_fulltext_index.go  create_general_index.go  create_geo_index.go  create_hash_index.go  create_hash_parameters.go  create_persistent_index.go  create_skip_list_index.go  create_ttl_index.go  delete_index.go  get_all_indices.go  get_index.go  shared.go
requests/kv_req/: BUILD.bazel  addNewReqRes.sh  create_kvcollection.go  create_options.go  delete_key_value.go  get_all_keys.go  get_all_kvcollections.go  get_all_values.go  get_value.go  set_key_value.go  shared_key_collection.go  shared_kv_collection.go  shared_kv_result.go  shared_order.go  shared_requests.go  truncate_kvcollection.go
requests/query_req/: BUILD.bazel  addNewReqRes.sh  create_cursor.go  create_cursor_options.go  delete_cursor.go  explain_query.go  read_next_cursor.go  shared.go  shared_utils.go  validate_query.go
requests/qw_req/: create_query_worker.go  delete_query_worker.go  read_all_query_workers.go  read_next_cursor.go  run_query_worker.go  shared.go  update_query_worker.go
scripts/bash_shared/: convert_functions.sh  rename_functions.sh
scripts/dev/: build_all.sh  project-stats.sh  rebuild_all.sh
scripts/setup/: check_requirements.sh
scripts/test/: test-all.sh  test-collection.sh  test-document.sh  test-graph.sh  test-index.sh  test-kv.sh  test-query-worker.sh  test-query.sh
src/: access_api.go  client.go  client_config.go  client_error.go  client_request.go  client_response.go  interface.go  util.go
src/client/: access_api.go  client.go  client_config.go  client_error.go  client_request.go  client_response.go  interface.go  util.go
src/kv/kv_req/: shared_key_collection.go  shared_kv_collection.go
src/requests/: BUILD.bazel  addNewReqRes.sh
src/requests/collection_req/: get_all_collections.go  get_collection_info.go  shared.go
src/requests/document_req/: addNewReqRes.sh  replace_many_document.go
src/requests/graph_req/: addNewReqRes.sh  delete_graph.go  get_edge.go  shared.go
src/requests/index_req/: get_all_indices.go
src/requests/kv_req/: addNewReqRes.sh  count.go  delete_kvcollection.go  delete_value.go
src/requests/query_req/: addNewReqRes.sh  delete_cursor.go
src/utils/: BUILD.bazel  check_utils.go  dbg.go  print_utils.go
tests/collection/: BUILD.bazel  collection_test.go
tests/conf/: BUILD.bazel  gdn_config.go
tests/document/: BUILD.bazel  document_many_test.go  document_test.go  utils.go
tests/graph/: BUILD.bazel  graph_edge_test.go  graph_test.go  graph_vertex_test.go  utils.go
tests/index/: BUILD.bazel  index_test.go  utils.go
tests/kv/: BUILD.bazel  kv_test.go
tests/query/: BUILD.bazel  query_test.go
tests/query_worker/: query_worker_test.go
tests/utils/: utils.go
types/: collection_types.go  edge_direction.go  index_type.go  interface.go
utils/: BUILD.bazel  print_utils.go  time_utils.go
