load("@io_bazel_rules_go//go:def.bzl", "go_library")

package(default_visibility = ["//visibility:public"])

load("@bazel_gazelle//:def.bzl", "DEFAULT_LANGUAGES", "gazelle", "gazelle_binary")
load("@io_bazel_rules_k8s//k8s:objects.bzl", "k8s_objects")
load("@com_github_bazelbuild_buildtools//buildifier:def.bzl", "buildifier")

gazelle_binary(
    name = "gazelle_binary",
    languages = DEFAULT_LANGUAGES,
    visibility = ["//visibility:public"],
)

# gazelle:prefix goC8/
# gazelle:exclude examples/
gazelle(
    name = "gazelle",
    gazelle = "//:gazelle_binary",
)

buildifier(
    name = "buildifier",
)

filegroup(
    name = "build",
    srcs = [
        #        ":goC8",  # throws weirdo error
        "//requests:build",
    ],
    visibility = ["//visibility:public"],
)

go_library(
    name = "goC8",
    srcs = [
        "access_api.go",
        "client.go",
        "client_config.go",
        "client_error.go",
        "client_request.go",
        "client_response.go",
        "collection.go",
        "document.go",
        "document_many.go",
        "graph.go",
        "index.go",
        "interface.go",
        "key.go",
        "util.go",
    ],
    importpath = "goC8/",
    deps = [
        "@com_github_json_iterator_go//:go",
        "@com_github_marvin_hansen_goc8//requests/collection_req",
        "@com_github_marvin_hansen_goc8//requests/document_req",
        "@com_github_marvin_hansen_goc8//requests/graph_req",
        "@com_github_marvin_hansen_goc8//requests/index_req",
        "@com_github_valyala_fasthttp//:fasthttp",
    ],
)
