load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "utils",
    srcs = [
        "check_utils.go",
        "utils.go",
    ],
    importpath = "goC8/utils",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_marvin_hansen_goc8//:goC8",
        "@com_github_marvin_hansen_goc8//requests/query_req",
    ],
)
