load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "documentstore_lib",
    srcs = ["main.go"],
    importpath = "goC8/examples/documentstore",
    visibility = ["//visibility:private"],
)

go_binary(
    name = "documentstore",
    embed = [":documentstore_lib"],
    visibility = ["//visibility:public"],
)
