load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

filegroup(
    name = "build",
    srcs = [
        ":graph_lib",
    ],
    visibility = ["//visibility:public"],
)

go_library(
    name = "graph_lib",
    srcs = ["main.go"],
    importpath = "goC8/examples/graph",
    visibility = ["//visibility:private"],
)

go_binary(
    name = "graph",
    embed = [":graph_lib"],
    visibility = ["//visibility:public"],
)
