load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "index_req",
    srcs = [
        "create_fulltext_index.go",
        "create_general_index.go",
        "create_geo_index.go",
        "delete_index.go",
        "get_all_indices.go",
        "get_index.go",
        "shared.go",
    ],
    importpath = "goC8/requests/index_req",
    visibility = ["//visibility:public"],
)
