load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "kv_req",
    srcs = [
        "count.go",
        "create_kvcollection.go",
        "create_options.go",
        "delete_kvcollection.go",
        "get_all_kvcollections.go",
        "set_key_value.go",
        "shared_requests.go",
        "shared_response.go",
        "truncate_kvcollection.go",
    ],
    importpath = "goC8/requests/kv_req",
    visibility = ["//visibility:public"],
)
