load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "query_req",
    srcs = [
        "create_cursor.go",
        "create_cursor_options.go",
        "delete_cursor.go",
        "read_next_cursor.go",
        "shared.go",
    ],
    importpath = "goC8/requests/query_req",
    visibility = ["//visibility:public"],
)
