load("@io_bazel_rules_go//go:def.bzl", "go_test")

go_test(
    name = "collection_test",
    srcs = ["collection_test.go"],
    deps = [
        "@com_github_marvin_hansen_goc8//:go_default_library",
        "@com_github_marvin_hansen_goc8//requests/collection_req:go_default_library",
        "@com_github_stretchr_testify//assert",
    ],
)
