load("@io_bazel_rules_go//go:def.bzl", "go_test")

go_test(
    name = "collection_test",
    srcs = ["collection_test.go"],
    deps = [
        "@com_github_marvin_hansen_goc8//:goC8",
        "@com_github_marvin_hansen_goc8//requests/collection_req",
        "@com_github_marvin_hansen_goc8//utils",
        "@com_github_stretchr_testify//assert",
    ],
)
