load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "vertex_req",
    srcs = [
        "get_all_vertices.go",
        "get_vertex.go",
    ],
    importpath = "goC8/requests/graph_req/vertex_req",
    visibility = ["//visibility:public"],
    deps = ["@com_github_marvin_hansen_goc8//requests/graph_req"],
)
